fix(search-with-typeahead): fix smaller breakpoint misalignment

--- a/packages/styles/scss/components/search-with-typeahead/_search-with-typeahead.scss
+++ b/packages/styles/scss/components/search-with-typeahead/_search-with-typeahead.scss
@@ -162,11 +162,6 @@ $button-transition: background-color 110ms, border-color 110ms, color 110ms;
       width: 100%;
       margin-left: 0;
 
-      @include carbon--breakpoint-down(md) {
-        width: 100vw;
-        right: 0;
-      }
-
       button.#{$prefix}--header__search--close.#{$prefix}--header__action[aria-label='Close'] {
         display: inline-flex;
       }
